fix: hero spacing, accidentally modified the wrong specifier

--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -1,10 +1,11 @@
 .hero-fg {
     width: 100vw;
+    height: 60vh;
 }
 
 .hero-section {
     position: relative;
-    height: 60vh;
+    height: 80vh;
     display: flex;
     align-items: center;
     overflow: hidden;
